# Hello_App

./: .gitmodules
prototype/Networking/kotlinClient/: build.gradle  makefile  settings.gradle
prototype/Networking/kotlinClient/gradle/wrapper/: gradle-wrapper.properties
prototype/Networking/kotlinClient/src/main/kotlin/kotlinClient/: App.kt
prototype/Networking/kotlinClient/src/test/kotlin/kotlinClient/: AppTest.kt
prototype/Networking/rustServer/: Cargo.toml
prototype/Networking/rust_server/: Cargo.toml
prototype/Networking/rust_server/src/: Lib.rs  main.rs
prototype/Networking/rust_server/ssl/: cert.pem  certificate.pfx  identity.jks  identity.pfx  key.pem
prototype/ToDo/app/: build.gradle
prototype/ToDo/app/src/main/: AndroidManifest.xml
prototype/ToDo/app/src/main/java/com/example/todo/: MainActivity.kt  SplashActivity.kt
prototype/ToDo/app/src/main/res/layout/: activity_main.xml  activity_splash.xml  new_task.xml  task_layout_works.xml
prototype/ToDo/gradle/wrapper/: gradle-wrapper.properties
