[package]
name = "rust_server"
version = "0.1.0"
authors = ["Matthew Bartlett <endercreeper92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rsa   = "0.3.0"
rand  = { version = "0.7", features = ["default","getrandom"]}
