[package]
name = "rust_server"
version = "0.1.0"
authors = ["Matthew Bartlett <endercreeper92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
# rand  = { version = "0.7", features = ["default","getrandom"]}
openssl = { version = "0.10", features = ["vendored"] }
